updated working example to run a KkrCalculation after VornoiCalculation

--- a/examples/kkr_plugins_test.ipynb
+++ b/examples/kkr_plugins_test.ipynb
@@ -38,6 +38,8 @@
     "from aiida_kkr.calculations.kkr import KkrCalculation\n",
     "from aiida_kkr.calculations.voro import VoronoiCalculation\n",
     "from aiida_kkr.parsers.voro import VoronoiParser\n",
+    "from aiida_kkr.parsers.kkr import KkrParser\n",
+    "\n",
     "\n",
     "#from aiida_kkr.tools.kkrcontrol import \n",
     "# example_fcc_Cu_lmax2_ASA_noSOC\n",
@@ -237,8 +239,19 @@
     "editable": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
    "source": [
-    "submit_test = False"
+    "submit_test = True"
    ]
   },
   {
@@ -366,30 +379,74 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "emin = calc.output_dict()['output_parameters']['EMIN']\n",
-    "remote = calc.output_dict()['remote']\n",
-    "keyw2 = keyw\n",
-    "keyw2['EMIN'][0] = emin"
+    "calc2 = load_node(79565)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "#emin = calc1.get_outputs_dict()['output_parameters'].get_dict()['EMIN']\n",
+    "emin = calc2.res.EMIN\n",
+    "remote = calc2.get_outputs_dict()['remote_folder']\n",
+    "keywords2 = keywords\n",
+    "keywords2['EMIN'][0] = emin\n",
+    "#pprint(keywords2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "keyw2 = ParameterData(dict=keywords2)\n",
+    "#keyw2.store()\n",
+    "keyw2 = load_node(79570)\n",
+    "print keyw2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "isinstance(calc, VoronoiCalculation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "# kkr\n",
-    "code = Code.get_from_string('kkr@local_mac')#'kkrimp@local_mac')\n",
+    "code = Code.get_from_string('kkr1@local_mac')#'kkrimp@local_mac')\n",
     "calc1 = KkrCalculation()\n",
     "calc1.label = 'Test kkr'\n",
     "calc1.set_withmpi(False)\n",
@@ -397,9 +454,23 @@
     "calc1.set_max_wallclock_seconds(300)\n",
     "calc1.set_computer('local_mac')\n",
     "calc1.use_code(code)\n",
-    "calc1.use_structure(Cu)\n",
+    "#calc1.use_structure(Cu)\n",
     "calc1.use_parameters(keyw2)\n",
-    "calc1.use_remote(remote)"
+    "calc1.use_parent_folder(remote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "from aiida.orm import JobCalculation\n",
+    "remote.get_inputs(node_type=JobCalculation)"
    ]
   },
   {
@@ -412,35 +483,85 @@
    },
    "outputs": [],
    "source": [
-    "submit_test = True"
+    "submit_test = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "if submit_test:\n",
-    "    subfolder, script_filename = calc.submit_test()\n",
+    "    subfolder, script_filename = calc1.submit_test()\n",
     "    print \"Test_submit for calculation (uuid='{}')\".format(\n",
-    "        calc.uuid)\n",
+    "        calc1.uuid)\n",
     "    print \"Submit file in {}\".format(os.path.join(\n",
     "        os.path.relpath(subfolder.abspath),\n",
     "        script_filename\n",
     "    ))\n",
     "else:\n",
-    "    calc.store_all()\n",
+    "    calc1.store_all()\n",
     "    print \"created calculation; calc=Calculation(uuid='{}') # ID={}\".format(\n",
-    "        calc.uuid, calc.dbnode.pk)\n",
-    "    calc.submit()\n",
+    "        calc1.uuid, calc.dbnode.pk)\n",
+    "    calc1.submit()\n",
     "    print \"submitted calculation; calc=Calculation(uuid='{}') # ID={}\".format(\n",
     "        calc.uuid, calc.dbnode.pk)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "! cat submit_test/20171110-00020///_aiidasubmit.sh\n",
+    "! ls submit_test/20171110-00020//\n",
+    "! cat submit_test/20171110-00020/inputcard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
