--- a/examples/kkr_plugins_scf_wc_test.ipynb
+++ b/examples/kkr_plugins_scf_wc_test.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# AiiDA-KKR demo"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Here is a Demo to run the Voronoi code with a follow up KKR calculation with AiiDA \n",
     "with pure python code. Also add the end we run the same with the kkr_scf workchain"
@@ -23,10 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Some Comments:\n",
     "\n",
@@ -40,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -58,7 +45,7 @@
     "    load_dbenv()\n",
     "from aiida.orm import Code, load_node\n",
     "from aiida.orm import DataFactory, CalculationFactory\n",
-    "from aiida_kkr.tools.kkrcontrol import write_kkr_inputcard_template, fill_keywords_to_inputcard, create_keyword_default_values\n",
+    "from aiida_kkr.tools.kkr_params import kkrparams\n",
     "from pprint import pprint\n",
     "from scipy import array\n",
     "from aiida_kkr.calculations.kkr import KkrCalculation\n",
@@ -73,14 +60,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare and AiiDAStructure Data as input, example Cu\n",
+    "# Prepare and fill AiiDA StructureData as input, example Cu\n",
     "\n",
     "alat = 6.830000 # in a_Bohr\n",
     "abohr = 0.52917721067\n",
@@ -93,78 +76,50 @@
     "Cu = StructureData(cell=[[a, a, 0.0], [a, 0.0, a], [0.0, a, a]])\n",
     "Cu.append_atom(position=[0.0, 0.0, 0.0], symbols='Cu')\n",
     "#Cu.store()\n",
-    "Cu = load_node(79546)\n",
+    "Cu = load_node(1)\n",
     "print(Cu)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now gernerate a ParameterData node with keyvalues needed by voronoi and KKR \n",
     "# we use a helper function for some defaults and set some values\n",
     "\n",
-    "keywords = create_keyword_default_values()\n",
-    "keywords['NATYP'][0] = natyp\n",
-    "keywords['ALATBASIS'][0] = alat\n",
-    "keywords['NSPIN'][0] = 1\n",
-    "keywords['LMAX'][0] = 2\n",
-    "# choose only coarse energy contour and k-mesh for test purposes\n",
-    "keywords['NPOL'][0] = 4\n",
-    "keywords['NPT1'][0] = 3\n",
-    "keywords['NPT2'][0] = 10\n",
-    "keywords['NPT3'][0] = 3\n",
-    "keywords['BZKX'][0] = 10\n",
-    "keywords['BZKY'][0] = 10\n",
-    "keywords['RCLUSTZ'][0] = 1.50\n",
-    "keywords['RCLUSTXY'][0] = 1.50\n",
-    "# for ASA\n",
-    "keywords['INS'] = [0, '%i']\n",
-    "keywords['KSHAPE'] = [0, '%i']\n",
-    "pprint(keywords)"
+    "keywords = kkrparams(NATYP=natyp, NSPIN=1, LMAX=2, RCLUSTZ=1.5, INS=0)\n",
+    "pprint(keywords.get_set_values())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Store the node\n",
-    "keyw = ParameterData(dict=keywords)\n",
+    "keyw = ParameterData(dict=keywords.get_dict())\n",
     "#keyw.store()\n",
-    "keyw = load_node(79550)\n",
+    "keyw = load_node(2)\n",
     "print keyw"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Running a single Vornoi calculation\n",
-    "voronoi = Code.get_from_string('voro@local_mac')\n",
+    "voronoi = Code.get_from_string('voronoi@iff003')\n",
     "calc = VoronoiCalculation()\n",
     "calc.label = 'Test voronoi'\n",
     "calc.set_withmpi(False)\n",
     "calc.set_resources({\"num_machines\" : 1})\n",
     "calc.set_max_wallclock_seconds(300)\n",
-    "calc.set_computer('local_mac')\n",
+    "calc.set_computer(voronoi.get_computer())\n",
     "calc.use_code(voronoi)\n",
     "calc.use_structure(Cu)\n",
     "calc.use_parameters(keyw)"
@@ -173,14 +128,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "submit_test = True\n",
+    "submit_test = False\n",
     "\n",
     "if submit_test:\n",
     "    subfolder, script_filename = calc.submit_test()\n",
@@ -202,26 +153,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!cat submit_test/20171110-00007/_aiidasubmit.sh\n",
-    "!ls submit_test/20171110-00001/\n",
-    "! cat submit_test/20171110-00007/inputcard"
+    "!cat submit_test/20181120-00001/_aiidasubmit.sh\n",
+    "!ls submit_test/20181120-00001/\n",
+    "!cat submit_test/20181120-00001/inputcard"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Ontop the voronoi calculation we want to run a KKR calculation\n",
@@ -231,11 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the calculation run before or load a voronoi calculation\n",
@@ -245,11 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We create a new parameter node in which we store the emin extracted form the voronoi calculation\n",
@@ -263,11 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "keyw2 = ParameterData(dict=keywords2)\n",
@@ -279,11 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now we create and run the kkr Calculation\n",
@@ -303,11 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "submit_test = False\n",
@@ -331,11 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! cat submit_test/20171110-00020///_aiidasubmit.sh\n",
@@ -346,11 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check with the verdi shell if everything with you calculations went right"
@@ -359,22 +274,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Voronoi parser test"
@@ -383,11 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n = load_node(79559)\n",
@@ -402,22 +305,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test KKR parser functions"
@@ -426,11 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from aiida_kkr.parsers.kkr import KkrParser, parse_kkr_outputfile"
@@ -439,11 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "outfile = '/Users/broeder/aiida/github/aiida-kkr/aiida_kkr/tests/files/kkr/outputfiles/out_kkr_Cu'"
@@ -452,11 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "res = parse_kkr_outputfile(outfile)"
@@ -465,11 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print res"
@@ -478,22 +357,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test kkr_scf workchain"
@@ -502,11 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from aiida_kkr.workflows.kkr_scf import kkr_scf_wc\n",
@@ -516,11 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use same nodes as above\n",
@@ -536,11 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The workflow is still very premitive, therefore we use for testing parameters that should work for both codes\n",
@@ -550,11 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(res)"
@@ -563,11 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "res = submit(kkr_scf_wc, structure=Cu, calc_parameters=key2w, voronoi=voronoi, kkr=kkr)# wf_parameters=wf_parameters,"
@@ -576,11 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -601,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.15"
   },
   "toc": {
    "colors": {
@@ -659,5 +506,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
