--- a/aiida_kkr/workflows/combined_imps_jij.ipynb
+++ b/aiida_kkr/workflows/combined_imps_jij.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "boolean-instrument",
+   "execution_count": null,
+   "id": "infectious-promotion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "pointed-gauge",
+   "execution_count": null,
+   "id": "minimal-crystal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,13 +39,13 @@
     "                 \"IAS-1/PGI-1, Germany. All rights reserved.\")\n",
     "__license__ = \"MIT license, see LICENSE.txt file\"\n",
     "__version__ = \"0.0.1\"\n",
-    "__contributors__ = (u\"Rubel Mozumder\", u\"Philipp Rüßmann\")\n"
+    "__contributors__ = (u\"Rubel Mozumder\", u\"Philipp Rüßmann\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "leading-signature",
+   "execution_count": 1,
+   "id": "beneficial-nitrogen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,22 @@
     "    )\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "former-reform",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "emotional-panel",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
