--- a/aiida_kkr/workflows/combined_imps_jij.ipynb
+++ b/aiida_kkr/workflows/combined_imps_jij.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "military-tactics",
+   "id": "higher-funds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generous-monday",
+   "id": "comparable-college",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cathedral-longitude",
+   "id": "serial-plaza",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
     "                           include=('kkr', 'options', 'params_kkr_overwrite',), # expose only those port which are not set automatically\n",
     "                           namespace_options={'required': False}, # this makes sure the kkr code input is not needed if gf_host_remote is provided and the entire namespace is omitted\n",
     "                          )\n",
-    "        spec.input(\"impurity1_output_node\", required=False, valid_type=Dict, #TODO make validator for input node to make sure it is the output of kkr_imp_wc\n",
-    "                   help=\"\"\"\n",
+    "        spec.input(\"impurity1_output_node\", required=False, valid_type=Dict, \n",
+    "                   help=\"\"\" Needed if the jij runs fron the single impurity wc and two single impurity node. \n",
     "Output node of a single impurity calculation. This can be the output of either the `kkr_imp_wc`, `kkr_imp_sub_wc`\n",
     "workflows or of an `KkrimpCalculation`.\n",
     "Use these output Dict nodes:\n",
@@ -114,17 +114,20 @@
     "  * for `KkrimpCalculation`: single_imp_worlfow.outputs.output_parameters\n",
     "\"\"\")\n",
     "        spec.input(\"impurity2_output_node\", required=False, valid_type=Dict,\n",
-    "                   help=\"Output node of second single impurity calculation. See help string of `impurity1_output_node` for more details.\")\n",
+    "                   help=\"\"\"Needed if the jij runs fron the single impurity wc and two single impurity node. \n",
+    "                   Output node of second single impurity calculation. See help string of `impurity1_output_node` for more details.\"\"\")\n",
     "        \n",
     "        spec.input(\"offset_imp2\", valid_type=Dict, required=False,\n",
-    "                   help=\"\"\"Offset of the secon impurity with respect to the first impurity.\n",
+    "                   help=\"\"\"Needed if the jij runs fron the single impurity wc and two single impurity node.\n",
+    "                   Offset of the secon impurity with respect to the first impurity.\n",
     "Can be given either via the 'vector' or the 'index' keys in the dictionary.\n",
     "The 'vector' option allows to give the offset vector in cartesian units and \n",
     "the 'index' option allows to five the offset vector in units of the lattice \n",
     "vectors of the host system's structure.\"\"\")\n",
     "        \n",
     "        spec.input(\"gf_host_remote\", valid_type=RemoteData, required=False, #TODO add validator that makes sure this is not given together with the host_gf sub-workflow namespace\n",
-    "                   help=\"\"\"RemoteData node of pre-calculated host Green function (i.e. with kkr_flex_wc).\n",
+    "                   help=\"\"\"Needed if the jij runs fron the single impurity wc and two single impurity node.\n",
+    "                   RemoteData node of pre-calculated host Green function (i.e. with kkr_flex_wc).\n",
     "If given then the writeout step of the host GF is omitted.\"\"\")\n",
     "        \n",
     "        # Run the Jij calculation from the successful combine_imps_wc\n",
@@ -135,7 +138,7 @@
     "                           namespace_options={'required': False}\n",
     "                          )\n",
     "        spec.input(\"impurity_conbined_output_node\", required=False, valid_type=Dict, #TODO make validator for input node to make sure it is the output of kkr_imp_wc\n",
-    "                   help=\"\"\"\n",
+    "                   help=\"\"\" Need if jij runs from the combine_imps_wc.\n",
     "Output node from combine_imps_wc. The output either from `combine_imps_wc` or its `kkr_imp_sub_wc` workflow or its \n",
     "last `KkrimpCalculation`.\n",
     "Use these output Dict nodes:\n",
@@ -165,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-pizza",
+   "id": "attached-designation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprising-nicholas",
+   "id": "educational-timer",
    "metadata": {},
    "outputs": [],
    "source": []
