--- a/aiida_kkr/workflows/combined_imps_jij.ipynb
+++ b/aiida_kkr/workflows/combined_imps_jij.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "higher-funds",
+   "id": "filled-wales",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comparable-college",
+   "id": "alive-geography",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "serial-plaza",
+   "id": "suspended-module",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
     "    spec.outline(\n",
     "        cls.start,                         # Initialization of the workflow, to check and set the inputs into ctx, to set the workflow outline \n",
     "        if_(cls.need_combine_imps_wc_run)( # Incase jij calc has to be run from the single imp wc\n",
-    "            cls.run_coombine_imps_wc_run), \n",
+    "            cls.run_coombine_imps_wc_run), # Run here combine_imps_wc\n",
     "        cls.update_kkrimp_params,          # To collate the _wf_defaults and input wf_parameters, afterwards update the wf_parameters\n",
     "        cls.run_jij_step,                  # Run jij step\n",
     "        cls.return_results                 # Parse the calculation result\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attached-designation",
+   "id": "based-lawyer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "educational-timer",
+   "id": "loose-valuable",
    "metadata": {},
    "outputs": [],
    "source": []
